# ceres-v-caspar-bundle-adjustment

./: CMakeLists.txt  README.md  ceres_adapter.cc  ceres_adapter.h  generate.py  main.cc
src/: ceres_adapter.cc  generate_data.cc  main.cc
src/include/: ceres_adapter.h  generate_data.h
